# DevBoard

./: .gitignore  ARCHITECTURE.md  DATABASE_SCHEMA.md  FOLDER_STRUCTURE.md  LICENSE  MILESTONE_PLAN.md  PLANNING_COMPLETE.md  README.md  ROADMAP.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml  lint-and-test.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: README.md  auth.py
backend/app/core/: README.md  config.py  security.py
backend/app/models/: README.md  user.py
backend/app/repositories/: README.md  user_repository.py
backend/app/schemas/: README.md  user.py
backend/app/services/: README.md  auth_service.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: README.md  test_auth.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  TESTING.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: README.md
frontend/src/context/: AuthContext.tsx  ProtectedRoute.tsx  README.md
frontend/src/hooks/: README.md
frontend/src/pages/: Dashboard.tsx  Login.tsx  README.md  Signup.tsx
frontend/src/services/: README.md
frontend/src/types/: README.md
scripts/: update-github-project.ps1
